Made analysis code easily transferrable between datasets

--- a/R/enrichment.Rmd
+++ b/R/enrichment.Rmd
@@ -201,6 +201,12 @@ deGenes <- lapply(topTables, function(tt){
 })
 ```
 
+## masterGR
+
+```{r}
+masterGR <- readRDS(here("files/masterGR.Rds"))
+```
+
 # Gene sets
 
 Multiple gene set databases were accessed with the `msigdbr` package.
@@ -254,15 +260,11 @@ wkByID <- wk %>%
 
 - The Wikipathways gene sets consists of `r length(wkByID)` gene sets ranging from sizes of `r min(sapply(wkByID, length))` to `r max(sapply(wkByID, length))` genes.
 
-## masterGR
+# Fisher's exact test for clustering {.tabset}
 
-```{r}
-masterGR <- readRDS(here("files/masterGR.Rds"))
-```
+## Chromosome clustering {.tabset .tabset-pills}
 
-# Fisher's exact test for clustering
-
-## Chromosome clustering
+### Without DAR threshold
 
 ```{r}
 byChr_fisher <- sapply(topTables, function(tt){
@@ -290,11 +292,22 @@ byChr_pvals <- sapply(byChr_fisher, function(geno){
     mutate(
       bonf = p.adjust(p, method = "bonf"),
       sig = bonf < 0.05,
-      p = formatC(p, format = "e", digits = 2),
-      bonf = formatC(bonf, format = "e", digits = 2),
+      p = signif(p, digits = 3),
+      bonf = signif(bonf, digits = 3),
     ) %>%
     dplyr::filter(sig)
 }, simplify = FALSE)
+```
+
+```{r}
+tagList({
+  lapply(seq_along(byChr_pvals), function(i, tbl, name){
+    lbSimpleDT(
+      tbl = tbl[[i]],
+      cap = paste0("Table ", i, ": Genotype - ", name[[i]])
+    )
+  }, tbl = byChr_pvals, name = names(byChr_pvals))
+})
 ```
 
 ### With DAR threshold
@@ -341,10 +354,21 @@ byChrThresh_pvals <- sapply(byChrThresh_fisher, function(geno){
 }, simplify = FALSE)
 ```
 
+```{r}
+tagList({
+  lapply(seq_along(byChrThresh_pvals), function(i, tbl, name){
+    lbSimpleDT(
+      tbl = tbl[[i]],
+      cap = paste0("Table ", i, ": Genotype - ", name[[i]])
+    )
+  }, tbl = byChrThresh_pvals, name = names(byChrThresh_pvals))
+})
+```
+
 Since we still have a significant enrichment for DE genes on the mutant chromosome, let's check the gene sets they belong to and see if they make sense.
 
 ```{r}
-genesPassed <- as_tibble(masterGR$MPSvsWT) %>%
+genesPassed <- as_tibble(masterGR[[1]]) %>%
   mutate(seqnames = as.factor(seqnames)) %>%
   dplyr::filter(
     seqnames == "24",
@@ -362,7 +386,7 @@ wkByGene[names(wkByGene) %in% genesPassed]
 
 Only one gene is present in any of the gene sets, and it does not appear to have an expected relevance to MPS.
 
-## Regional clustering
+## Regional clustering {.tabset .tabset-pills}
 
 ```{r}
 region_size <- 1e6
@@ -386,7 +410,7 @@ regionsFwd <- sapply(chrInfo$name[chrInfo$name != "MT"], function(chr){
       "chr",
       chr,
       ":",
-      starts, "-" , 
+      starts, "-" ,
       formatC(starts + region_size - 1, format = "d")
     ))
 }, simplify = FALSE) %>%
@@ -441,7 +465,18 @@ regionsFwd_pvals <- sapply(regionsFwd_fisher, function(geno){
 ```
 
 ```{r}
-genes[genes$gene_name == "naglu"]
+tagList({
+  lapply(seq_along(regionsFwd_pvals), function(i, tbl, name){
+    lbSimpleDT(
+      tbl = tbl[[i]],
+      cap = paste0("Table ", i, ": Genotype - ", name[[i]])
+    )
+  }, tbl = regionsFwd_pvals, name = names(regionsFwd_pvals))
+})
+```
+
+```{r}
+genes[genes$gene_name == "sorl1"]
 ```
 
 ### Reverse
@@ -464,7 +499,7 @@ regionsRvs <- sapply(chrInfo$name[chrInfo$name != "MT"], function(chr){
       "chr",
       chr,
       ":",
-      starts, "-" , 
+      starts, "-" ,
       formatC(starts + region_size - 1, format = "d")
     ))
 }, simplify = FALSE) %>%
@@ -519,128 +554,21 @@ regionsRvs_pvals <- sapply(regionsRvs_fisher, function(geno){
 ```
 
 ```{r}
-genes[genes$gene_name == "naglu"]
+tagList({
+  lapply(seq_along(regionsRvs_pvals), function(i, tbl, name){
+    lbSimpleDT(
+      tbl = tbl[[i]],
+      cap = paste0("Table ", i, ": Genotype - ", name[[i]])
+    )
+  }, tbl = regionsRvs_pvals, name = names(regionsRvs_pvals))
+})
+```
+
+```{r}
+genes[genes$gene_name == "sorl1"]
 ```
 
 # Enrichment testing {.tabset}
-
-## Hallmark {.tabset .tabset-pills}
-
-```{r hm_fry}
-hm_fry <- contrasts %>%
-  apply(MARGIN = 2, function(contrast){
-    cpm(dgeList$counts, log = TRUE) %>%
-      fry(
-        index = hmByID,
-        design = design,
-        contrast = contrast,
-        sort = "mixed"
-      ) %>%
-      rownames_to_column("Pathway") %>%
-      as_tibble() %>%
-      mutate(
-        Pathway = str_trunc(Pathway, width = 18),
-        PValue = formatC(PValue, digits = 1, format = "e"),
-        FDR = formatC(FDR, digits = 1, format = "e"),
-        PValue.Mixed = formatC(PValue.Mixed, digits = 1, format = "e"),
-        FDR.Mixed = formatC(FDR.Mixed, digits = 1, format = "e"),
-      )
-  })
-```
-
-### EOfAD vs WT
-
-```{r}
-datatable(hm_fry[[1]])
-```
-
-### MPS-IIIB vs WT
-
-```{r}
-datatable(hm_fry[[2]])
-```
-
-## KEGG {.tabset .tabset-pills}
-
-```{r kg_fry}
-kg_fry <- contrasts %>%
-  apply(MARGIN = 2, function(contrast){
-    cpm(dgeList$counts, log = TRUE) %>%
-      fry(
-        index = kgByID,
-        design = design,
-        contrast = contrast,
-        sort = "mixed"
-      ) %>%
-      rownames_to_column("Pathway") %>%
-      as_tibble() %>%
-      mutate(
-        Pathway = str_trunc(Pathway, width = 18),
-        PValue = formatC(PValue, digits = 1, format = "e"),
-        FDR = formatC(FDR, digits = 1, format = "e"),
-        PValue.Mixed = formatC(PValue.Mixed, digits = 1, format = "e"),
-        FDR.Mixed = formatC(FDR.Mixed, digits = 1, format = "e"),
-      )
-  })
-```
-
-### EOfAD vs WT
-
-```{r}
-datatable(kg_fry[[1]])
-```
-
-### MPS-IIIB vs WT
-
-```{r}
-datatable(kg_fry[[2]])
-```
-
-## Wikipathways {.tabset .tabset-pills}
-
-```{r wk_fry}
-wk_fry <- contrasts %>%
-  apply(MARGIN = 2, function(contrast){
-    cpm(dgeList$counts, log = TRUE) %>%
-      fry(
-        index = wkByID,
-        design = design,
-        contrast = contrast,
-        sort = "mixed"
-      ) %>%
-      rownames_to_column("Pathway") %>%
-      as_tibble() %>%
-      mutate(
-        Pathway = str_trunc(Pathway, width = 18),
-        PValue = formatC(PValue, digits = 1, format = "e"),
-        FDR = formatC(FDR, digits = 1, format = "e"),
-        PValue.Mixed = formatC(PValue.Mixed, digits = 1, format = "e"),
-        FDR.Mixed = formatC(FDR.Mixed, digits = 1, format = "e"),
-      )
-  })
-```
-
-### EOfAD vs WT
-
-```{r}
-datatable(wk_fry[[1]])
-```
-
-### MPS-IIIB vs WT
-
-```{r}
-datatable(wk_fry[[2]])
-```
-
-# eQTL bias removal {.tabset}
-
-```{r dist_winRanges}
-dist_winRanges <- readRDS(here("files/dist_winRanges.Rds"))
-```
-
-```{r}
-masterGR <- readRDS(here("files/masterGR.Rds"))
-```
 
 ```{r}
 thresholds <- seq(0.1, 1.0, 0.1)
@@ -708,9 +636,9 @@ threshPlots_de <- lapply(threshOutcomes, function(x){
 })
 ```
 
-## Fry
+## Fry {.tabset .tabset-pills}
 
-### Hallmark {.tabset .tabset-pills}
+### Hallmark {.tabset}
 
 ```{r hm_fry_eqtl}
 hm_fry_eqtl <- colnames(contrasts) %>%
@@ -736,7 +664,7 @@ hm_fry_eqtl <- colnames(contrasts) %>%
         mutate(
           diversity_threshold = threshVal,
           rank = row_number(),
-          sig = FDR.Mixed < 0.05
+          sig = FDR < 0.05 | FDR.Mixed < 0.05
         )
     })
   }, simplify = FALSE)
@@ -864,43 +792,63 @@ pPlots_hm_fry <- sapply(colnames(contrasts), function(cont){
 }, simplify = FALSE)
 ```
 
-#### EOfAD vs WT
+#### Prior to thresholding
 
 ```{r}
-ggarrange(
-  rankPlots_hm_fry$EOfADvsWT,
-  NULL,
-  threshPlots_de$EOfADvsWT,
-  ncol = 1,
-  heights = c(4,0.2,1)
+tagList({
+  lapply(seq_along(hm_fry_eqtl),  function(i, tbl, name){
+    tbl[[i]][[10]] %>%
+      mutate(
+        PValue = scientific(PValue),
+        FDR = scientific(FDR),
+        PValue.Mixed = scientific(PValue.Mixed),
+        FDR.Mixed = scientific(FDR.Mixed)
+      ) %>%
+      dplyr::select(
+        Pathway, Direction, NGenes, PValue, FDR, PValue.Mixed, FDR.Mixed, sig
+      ) %>%
+      dplyr::arrange(-sig) %>%
+      lbComplexDT(
+        cap = paste0("Table ", i, ": Genotype - ", name[[i]]),
+        rownames = TRUE
+      )
+  }, tbl = hm_fry_eqtl, name = names(hm_fry_eqtl))
+})
+```
+
+#### Effects of thresholding
+
+```{r, results='hide'}
+lapply(seq_along(rankPlots_hm_fry), function(i, rankPlot, threshPlot, name){
+  ggarrange(
+    rankPlot[[i]],
+    NULL,
+    threshPlot[[i]],
+    ncol = 1,
+    heights = c(4,0.2,1)
+  ) %>%
+    annotate_figure(
+      top = text_grob(
+        paste0("Fig ", i, ": Genotype - ", name[[i]]),
+        face = "bold"
+      )
+    )
+},
+rankPlot = rankPlots_hm_fry,
+threshPlot = threshPlots_de,
+name = names(threshPlots_de)
 )
 ```
 
-```{r}
-if (length(hm_fry_eqtl_sig$EOfADvsWT)) {
-  pPlots_hm_fry$EOfADvsWT
-}
+```{r results='hide'}
+lapply(seq_along(pPlots_hm_fry), function(i, pPlot, sig){
+  if (length(sig[[i]])) {
+    pPlot[[i]]
+  }
+}, pPlot = pPlots_hm_fry, sig = hm_fry_eqtl_sig)
 ```
 
-#### MPS vs WT
-
-```{r}
-ggarrange(
-  rankPlots_hm_fry$MPSvsWT,
-  NULL,
-  threshPlots_de$MPSvsWT,
-  ncol = 1,
-  heights = c(4,0.2,1)
-)
-```
-
-```{r}
-if (length(hm_fry_eqtl_sig$MPSvsWT)) {
-  pPlots_hm_fry$MPSvsWT
-}
-```
-
-### KEGG {.tabset .tabset-pills}
+### KEGG {.tabset}
 
 ```{r kg_fry_eqtl}
 kg_fry_eqtl <- colnames(contrasts) %>%
@@ -1054,43 +1002,63 @@ pPlots_kg_fry <- sapply(colnames(contrasts), function(cont){
 }, simplify = FALSE)
 ```
 
-#### EOfAD vs WT
+#### Prior to thresholding
 
 ```{r}
-ggarrange(
-  rankPlots_kg_fry$EOfADvsWT,
-  NULL,
-  threshPlots_de$EOfADvsWT,
-  ncol = 1,
-  heights = c(4,0.2,1)
+tagList({
+  lapply(seq_along(kg_fry_eqtl),  function(i, tbl, name){
+    tbl[[i]][[10]] %>%
+      mutate(
+        PValue = scientific(PValue),
+        FDR = scientific(FDR),
+        PValue.Mixed = scientific(PValue.Mixed),
+        FDR.Mixed = scientific(FDR.Mixed)
+      ) %>%
+      dplyr::select(
+        Pathway, Direction, NGenes, PValue, FDR, PValue.Mixed, FDR.Mixed, sig
+      ) %>%
+      dplyr::arrange(-sig) %>%
+      lbComplexDT(
+        cap = paste0("Table ", i, ": Genotype - ", name[[i]]),
+        rownames = TRUE
+      )
+  }, tbl = kg_fry_eqtl, name = names(kg_fry_eqtl))
+})
+```
+
+#### Effects of thresholding
+
+```{r, results='hide'}
+lapply(seq_along(rankPlots_kg_fry), function(i, rankPlot, threshPlot, name){
+  ggarrange(
+    rankPlot[[i]],
+    NULL,
+    threshPlot[[i]],
+    ncol = 1,
+    heights = c(4,0.2,1)
+  ) %>%
+    annotate_figure(
+      top = text_grob(
+        paste0("Fig ", i, ": Genotype - ", name[[i]]),
+        face = "bold"
+      )
+    )
+},
+rankPlot = rankPlots_kg_fry,
+threshPlot = threshPlots_de,
+name = names(threshPlots_de)
 )
 ```
 
-```{r}
-if (length(kg_fry_eqtl_sig$EOfADvsWT)) {
-  pPlots_kg_fry$EOfADvsWT
-}
+```{r results='hide'}
+lapply(seq_along(pPlots_kg_fry), function(i, pPlot, sig){
+  if (length(sig[[i]])) {
+    pPlot[[i]]
+  }
+}, pPlot = pPlots_kg_fry, sig = kg_fry_eqtl_sig)
 ```
 
-#### MPS vs WT
-
-```{r}
-ggarrange(
-  rankPlots_kg_fry$MPSvsWT,
-  NULL,
-  threshPlots_de$MPSvsWT,
-  ncol = 1,
-  heights = c(4,0.2,1)
-)
-```
-
-```{r}
-if (length(kg_fry_eqtl_sig$MPSvsWT)) {
-  pPlots_kg_fry$MPSvsWT
-}
-```
-
-### Wikipathways {.tabset .tabset-pills}
+### Wikipathways {.tabset}
 
 ```{r wk_fry_eqtl}
 wk_fry_eqtl <- colnames(contrasts) %>%
@@ -1244,43 +1212,63 @@ pPlots_wk_fry <- sapply(colnames(contrasts), function(cont){
 }, simplify = FALSE)
 ```
 
-#### EOfAD vs WT
+#### Prior to thresholding
 
 ```{r}
-ggarrange(
-  rankPlots_wk_fry$EOfADvsWT,
-  NULL,
-  threshPlots_de$EOfADvsWT,
-  ncol = 1,
-  heights = c(4,0.2,1)
+tagList({
+  lapply(seq_along(wk_fry_eqtl),  function(i, tbl, name){
+    tbl[[i]][[10]] %>%
+      mutate(
+        PValue = scientific(PValue),
+        FDR = scientific(FDR),
+        PValue.Mixed = scientific(PValue.Mixed),
+        FDR.Mixed = scientific(FDR.Mixed)
+      ) %>%
+      dplyr::select(
+        Pathway, Direction, NGenes, PValue, FDR, PValue.Mixed, FDR.Mixed, sig
+      ) %>%
+      dplyr::arrange(-sig) %>%
+      lbComplexDT(
+        cap = paste0("Table ", i, ": Genotype - ", name[[i]]),
+        rownames = TRUE
+      )
+  }, tbl = wk_fry_eqtl, name = names(wk_fry_eqtl))
+})
+```
+
+#### Effects of thresholding
+
+```{r, results='hide'}
+lapply(seq_along(rankPlots_wk_fry), function(i, rankPlot, threshPlot, name){
+  ggarrange(
+    rankPlot[[i]],
+    NULL,
+    threshPlot[[i]],
+    ncol = 1,
+    heights = c(4,0.2,1)
+  ) %>%
+    annotate_figure(
+      top = text_grob(
+        paste0("Fig ", i, ": Genotype - ", name[[i]]),
+        face = "bold"
+      )
+    )
+},
+rankPlot = rankPlots_wk_fry,
+threshPlot = threshPlots_de,
+name = names(threshPlots_de)
 )
 ```
 
-```{r}
-if (length(wk_fry_eqtl_sig$EOfADvsWT)) {
-  pPlots_wk_fry$EOfADvsWT
-}
+```{r results='hide'}
+lapply(seq_along(pPlots_wk_fry), function(i, pPlot, sig){
+  if (length(sig[[i]])) {
+    pPlot[[i]]
+  }
+}, pPlot = pPlots_wk_fry, sig = wk_fry_eqtl_sig)
 ```
 
-#### MPS vs WT
-
-```{r}
-ggarrange(
-  rankPlots_wk_fry$MPSvsWT,
-  NULL,
-  threshPlots_de$MPSvsWT,
-  ncol = 1,
-  heights = c(4,0.2,1)
-)
-```
-
-```{r}
-if (length(wk_fry_eqtl_sig$MPSvsWT)) {
-  pPlots_wk_fry$MPSvsWT
-}
-```
-
-## GSEA
+## GSEA {.tabset .tabset-pills}
 
 ```{r}
 ranks_d <- lapply(topTables, function(x){
@@ -1300,7 +1288,7 @@ ranks_nd <- lapply(topTables, function(x){
 })
 ```
 
-### Hallmark {.tabset .tabset-pills}
+### Hallmark {.tabset}
 
 ```{r hm_gsea_eqtl}
 set.seed(220615)
@@ -1453,43 +1441,61 @@ pPlots_hm_gsea <- sapply(colnames(contrasts), function(cont){
 }, simplify = FALSE)
 ```
 
-#### EOfAD vs WT
+#### Prior to thresholding
 
 ```{r}
-ggarrange(
-  rankPlots_hm_gsea$EOfADvsWT,
-  NULL,
-  threshPlots_de$EOfADvsWT,
-  ncol = 1,
-  heights = c(4,0.2,1)
+tagList({
+  lapply(seq_along(hm_gsea_eqtl),  function(i, tbl, name){
+    tbl[[i]][[10]] %>%
+      mutate(
+        sig = FDR < 0.05,
+        pval = scientific(pval),
+        FDR = scientific(FDR)
+      ) %>%
+      dplyr::select(Pathway, Direction, edgeSize, pval, FDR, sig) %>%
+      dplyr::arrange(-sig) %>%
+      lbComplexDT(
+        cap = paste0("Table ", i, ": Genotype - ", name[[i]]),
+        rownames = TRUE
+      )
+  }, tbl = hm_gsea_eqtl, name = names(hm_gsea_eqtl))
+})
+
+```
+
+#### Effects of thresholding
+
+```{r, results='hide'}
+lapply(seq_along(rankPlots_hm_gsea), function(i, rankPlot, threshPlot, name){
+  ggarrange(
+    rankPlot[[i]],
+    NULL,
+    threshPlot[[i]],
+    ncol = 1,
+    heights = c(4,0.2,1)
+  ) %>%
+    annotate_figure(
+      top = text_grob(
+        paste0("Fig ", i, ": Genotype - ", name[[i]]),
+        face = "bold"
+      )
+    )
+},
+rankPlot = rankPlots_hm_gsea,
+threshPlot = threshPlots_de,
+name = names(threshPlots_de)
 )
 ```
 
-```{r}
-if (length(hm_gsea_eqtl_sig$EOfADvsWT)) {
-  pPlots_hm_gsea$EOfADvsWT
-}
+```{r results='hide'}
+lapply(seq_along(pPlots_hm_gsea), function(i, pPlot, sig){
+  if (length(sig[[i]])) {
+    pPlot[[i]]
+  }
+}, pPlot = pPlots_hm_gsea, sig = hm_gsea_eqtl_sig)
 ```
 
-#### MPS vs WT
-
-```{r}
-ggarrange(
-  rankPlots_hm_gsea$MPSvsWT,
-  NULL,
-  threshPlots_de$MPSvsWT,
-  ncol = 1,
-  heights = c(4,0.2,1)
-)
-```
-
-```{r}
-if (length(hm_gsea_eqtl_sig$MPSvsWT)) {
-  pPlots_hm_gsea$MPSvsWT
-}
-```
-
-### KEGG {.tabset .tabset-pills}
+### KEGG {.tabset}
 
 ```{r kg_gsea_eqtl}
 set.seed(220615)
@@ -1642,43 +1648,61 @@ pPlots_kg_gsea <- sapply(colnames(contrasts), function(cont){
 }, simplify = FALSE)
 ```
 
-#### EOfAD vs WT
+#### Prior to thresholding
 
 ```{r}
-ggarrange(
-  rankPlots_kg_gsea$EOfADvsWT,
-  NULL,
-  threshPlots_de$EOfADvsWT,
-  ncol = 1,
-  heights = c(4,0.2,1)
+tagList({
+  lapply(seq_along(kg_gsea_eqtl),  function(i, tbl, name){
+    tbl[[i]][[10]] %>%
+      mutate(
+        sig = FDR < 0.05,
+        pval = scientific(pval),
+        FDR = scientific(FDR)
+      ) %>%
+      dplyr::select(Pathway, Direction, edgeSize, pval, FDR, sig) %>%
+      dplyr::arrange(-sig) %>%
+      lbComplexDT(
+        cap = paste0("Table ", i, ": Genotype - ", name[[i]]),
+        rownames = TRUE
+      )
+  }, tbl = kg_gsea_eqtl, name = names(kg_gsea_eqtl))
+})
+
+```
+
+#### Effects of thresholding
+
+```{r, results='hide'}
+lapply(seq_along(rankPlots_kg_gsea), function(i, rankPlot, threshPlot, name){
+  ggarrange(
+    rankPlot[[i]],
+    NULL,
+    threshPlot[[i]],
+    ncol = 1,
+    heights = c(4,0.2,1)
+  ) %>%
+    annotate_figure(
+      top = text_grob(
+        paste0("Fig ", i, ": Genotype - ", name[[i]]),
+        face = "bold"
+      )
+    )
+},
+rankPlot = rankPlots_kg_gsea,
+threshPlot = threshPlots_de,
+name = names(threshPlots_de)
 )
 ```
 
-```{r}
-if (length(kg_gsea_eqtl_sig$EOfADvsWT)) {
-  pPlots_kg_gsea$EOfADvsWT
-}
+```{r results='hide'}
+lapply(seq_along(pPlots_kg_gsea), function(i, pPlot, sig){
+  if (length(sig[[i]])) {
+    pPlot[[i]]
+  }
+}, pPlot = pPlots_kg_gsea, sig = kg_gsea_eqtl_sig)
 ```
 
-#### MPS vs WT
-
-```{r}
-ggarrange(
-  rankPlots_kg_gsea$MPSvsWT,
-  NULL,
-  threshPlots_de$MPSvsWT,
-  ncol = 1,
-  heights = c(4,0.2,1)
-)
-```
-
-```{r}
-if (length(kg_gsea_eqtl_sig$MPSvsWT)) {
-  pPlots_kg_gsea$MPSvsWT
-}
-```
-
-### Wikipathways {.tabset .tabset-pills}
+### Wikipathways {.tabset}
 
 ```{r wk_gsea_eqtl}
 set.seed(220615)
@@ -1831,43 +1855,61 @@ pPlots_wk_gsea <- sapply(colnames(contrasts), function(cont){
 }, simplify = FALSE)
 ```
 
-#### EOfAD vs WT
+#### Prior to thresholding
 
 ```{r}
-ggarrange(
-  rankPlots_wk_gsea$EOfADvsWT,
-  NULL,
-  threshPlots_de$EOfADvsWT,
-  ncol = 1,
-  heights = c(4,0.2,1)
+tagList({
+  lapply(seq_along(wk_gsea_eqtl),  function(i, tbl, name){
+    tbl[[i]][[10]] %>%
+      mutate(
+        sig = FDR < 0.05,
+        pval = scientific(pval),
+        FDR = scientific(FDR)
+      ) %>%
+      dplyr::select(Pathway, Direction, edgeSize, pval, FDR, sig) %>%
+      dplyr::arrange(-sig) %>%
+      lbComplexDT(
+        cap = paste0("Table ", i, ": Genotype - ", name[[i]]),
+        rownames = TRUE
+      )
+  }, tbl = wk_gsea_eqtl, name = names(wk_gsea_eqtl))
+})
+
+```
+
+#### Effects of thresholding
+
+```{r, results='hide'}
+lapply(seq_along(rankPlots_wk_gsea), function(i, rankPlot, threshPlot, name){
+  ggarrange(
+    rankPlot[[i]],
+    NULL,
+    threshPlot[[i]],
+    ncol = 1,
+    heights = c(4,0.2,1)
+  ) %>%
+    annotate_figure(
+      top = text_grob(
+        paste0("Fig ", i, ": Genotype - ", name[[i]]),
+        face = "bold"
+      )
+    )
+},
+rankPlot = rankPlots_wk_gsea,
+threshPlot = threshPlots_de,
+name = names(threshPlots_de)
 )
 ```
 
-```{r}
-if (length(wk_gsea_eqtl_sig$EOfADvsWT)) {
-  pPlots_wk_gsea$EOfADvsWT
-}
+```{r results='hide'}
+lapply(seq_along(pPlots_wk_gsea), function(i, pPlot, sig){
+  if (length(sig[[i]])) {
+    pPlot[[i]]
+  }
+}, pPlot = pPlots_wk_gsea, sig = wk_gsea_eqtl_sig)
 ```
 
-#### MPS vs WT
-
-```{r}
-ggarrange(
-  rankPlots_wk_gsea$MPSvsWT,
-  NULL,
-  threshPlots_de$MPSvsWT,
-  ncol = 1,
-  heights = c(4,0.2,1)
-)
-```
-
-```{r}
-if (length(wk_gsea_eqtl_sig$MPSvsWT)) {
-  pPlots_wk_gsea$MPSvsWT
-}
-```
-
-# Weighting the ranked list
+# Weighting the ranked list {.tabset}
 
 ```{r}
 ranks_d_dar <- lapply(masterGR, function(x){
@@ -1879,7 +1921,7 @@ ranks_d_dar <- lapply(masterGR, function(x){
 })
 ```
 
-```{r}
+```{r, results='hide'}
 map2(ranks_d, ranks_d_dar, function(before, after){
   before <- enframe(before, name = "gene_id", value = "before") %>%
     mutate(rank_before = seq(1, length(gene_id), by = 1))
@@ -1892,140 +1934,203 @@ map2(ranks_d, ranks_d_dar, function(before, after){
 })
 ```
 
+## Hallmark {.tabset .tabset-pills}
+
 ```{r}
 set.seed(220615)
 hm_gsea_dar <- colnames(contrasts) %>%
   sapply(function(cont){
-      genes_passed <- masterGR[[cont]] %>%
-        as_tibble() %>%
-        pull(gene_id)
-      fgseaMultilevel(hmByID, ranks_d[[cont]][genes_passed], eps = 0) %>%
-        as_tibble() %>%
-        dplyr::rename(FDR = padj, Pathway = pathway) %>%
-        dplyr::arrange(pval) %>%
-        mutate(
-          edgeSize = vapply(leadingEdge, length, numeric(1)),
-          Direction = case_when(
-            sign(ES) == 1 ~ "Up",
-            sign(ES) == -1 ~ "Down",
-            sign(ES) == 0 ~ "None"
-          ),
-          rank = row_number(),
-          bonf.p.adj = p.adjust(pval, "bonferroni"),
-          sig = bonf.p.adj < 0.05
-        )
+    genes_passed <- masterGR[[cont]] %>%
+      as_tibble() %>%
+      pull(gene_id)
+    fgseaMultilevel(hmByID, ranks_d[[cont]][genes_passed], eps = 0) %>%
+      as_tibble() %>%
+      dplyr::rename(FDR = padj, Pathway = pathway) %>%
+      dplyr::arrange(pval) %>%
+      mutate(
+        edgeSize = vapply(leadingEdge, length, numeric(1)),
+        Direction = case_when(
+          sign(ES) == 1 ~ "Up",
+          sign(ES) == -1 ~ "Down",
+          sign(ES) == 0 ~ "None"
+        ),
+        rank = row_number(),
+        bonf.p.adj = p.adjust(pval, "bonferroni"),
+        sig = bonf.p.adj < 0.05
+      )
   }, simplify = FALSE)
-
-hm_gsea_eqtl$EOfADvsWT[[10]] %>%
-  mutate(fdr.sig = FDR < 0.05) %>%
-  dplyr::select(Pathway, pval, FDR, fdr.sig, bonf.p.adj, sig, everything())
-hm_gsea_dar$EOfADvsWT %>%
-  mutate(fdr.sig = FDR < 0.05) %>%
-  dplyr::select(Pathway, pval, FDR, fdr.sig, bonf.p.adj, sig, everything())
-
-hm_gsea_eqtl$MPSvsWT[[10]] %>%
-  mutate(fdr.sig = FDR < 0.05) %>%
-  dplyr::select(Pathway, pval, FDR, fdr.sig, bonf.p.adj, sig, everything())
-hm_gsea_dar$MPSvsWT %>%
-  mutate(fdr.sig = FDR < 0.05) %>%
-  dplyr::select(Pathway, pval, FDR, fdr.sig, bonf.p.adj, sig, everything())
 ```
+
+### Before weighting
+
+```{r}
+tagList({
+  lapply(seq_along(hm_gsea_eqtl),  function(i, tbl, name){
+    tbl[[i]][[10]] %>%
+      mutate(
+        sig = FDR < 0.05,
+        pval = scientific(pval),
+        FDR = scientific(FDR)
+      ) %>%
+      dplyr::select(Pathway, Direction, pval, FDR, sig, edgeSize) %>%
+      lbComplexDT(
+        cap = paste0("Table ", i, ": Genotype - ", name[[i]]),
+        rownames = TRUE
+      )
+  }, tbl = hm_gsea_eqtl, name = names(hm_gsea_eqtl))
+})
+```
+
+### After weighting
+
+```{r}
+tagList({
+  lapply(seq_along(hm_gsea_dar),  function(i, tbl, name){
+    tbl[[i]] %>%
+      mutate(
+        sig = FDR < 0.05,
+        pval = scientific(pval),
+        FDR = scientific(FDR)
+      ) %>%
+      dplyr::select(Pathway, Direction, pval, FDR, sig, edgeSize) %>%
+      lbComplexDT(
+        cap = paste0("Table ", i, ": Genotype - ", name[[i]]),
+        rownames = TRUE
+      )
+  }, tbl = hm_gsea_dar, name = names(hm_gsea_dar))
+})
+```
+
+## KEGG {.tabset .tabset-pills}
 
 ```{r}
 set.seed(220615)
 kg_gsea_dar <- colnames(contrasts) %>%
   sapply(function(cont){
-      genes_passed <- masterGR[[cont]] %>%
-        as_tibble() %>%
-        pull(gene_id)
-      fgseaMultilevel(kgByID, ranks_d[[cont]][genes_passed], eps = 0) %>%
-        as_tibble() %>%
-        dplyr::rename(FDR = padj, Pathway = pathway) %>%
-        dplyr::arrange(pval) %>%
-        mutate(
-          edgeSize = vapply(leadingEdge, length, numeric(1)),
-          Direction = case_when(
-            sign(ES) == 1 ~ "Up",
-            sign(ES) == -1 ~ "Down",
-            sign(ES) == 0 ~ "None"
-          ),
-          rank = row_number(),
-          bonf.p.adj = p.adjust(pval, "bonferroni"),
-          sig = bonf.p.adj < 0.05
-        )
+    genes_passed <- masterGR[[cont]] %>%
+      as_tibble() %>%
+      pull(gene_id)
+    fgseaMultilevel(kgByID, ranks_d[[cont]][genes_passed], eps = 0) %>%
+      as_tibble() %>%
+      dplyr::rename(FDR = padj, Pathway = pathway) %>%
+      dplyr::arrange(pval) %>%
+      mutate(
+        edgeSize = vapply(leadingEdge, length, numeric(1)),
+        Direction = case_when(
+          sign(ES) == 1 ~ "Up",
+          sign(ES) == -1 ~ "Down",
+          sign(ES) == 0 ~ "None"
+        ),
+        rank = row_number(),
+        bonf.p.adj = p.adjust(pval, "bonferroni"),
+        sig = bonf.p.adj < 0.05
+      )
   }, simplify = FALSE)
-
-kg_gsea_eqtl$EOfADvsWT[[10]] %>%
-  mutate(fdr.sig = FDR < 0.05) %>%
-  dplyr::select(Pathway, pval, FDR, fdr.sig, bonf.p.adj, sig, everything())
-kg_gsea_dar$EOfADvsWT %>%
-  mutate(fdr.sig = FDR < 0.05) %>%
-  dplyr::select(Pathway, pval, FDR, fdr.sig, bonf.p.adj, sig, everything())
-
-kg_gsea_eqtl$MPSvsWT[[10]] %>%
-  mutate(fdr.sig = FDR < 0.05) %>%
-  dplyr::select(Pathway, pval, FDR, fdr.sig, bonf.p.adj, sig, everything())
-kg_gsea_dar$MPSvsWT %>%
-  mutate(fdr.sig = FDR < 0.05) %>%
-  dplyr::select(Pathway, pval, FDR, fdr.sig, bonf.p.adj, sig, everything())
 ```
+
+### Before weighting
+
+```{r}
+tagList({
+  lapply(seq_along(kg_gsea_eqtl),  function(i, tbl, name){
+    tbl[[i]][[10]] %>%
+      mutate(
+        sig = FDR < 0.05,
+        pval = scientific(pval),
+        FDR = scientific(FDR)
+      ) %>%
+      dplyr::select(Pathway, Direction, pval, FDR, sig, edgeSize) %>%
+      lbComplexDT(
+        cap = paste0("Table ", i, ": Genotype - ", name[[i]]),
+        rownames = TRUE
+      )
+  }, tbl = kg_gsea_eqtl, name = names(kg_gsea_eqtl))
+})
+```
+
+### After weighting
+
+```{r}
+tagList({
+  lapply(seq_along(kg_gsea_dar),  function(i, tbl, name){
+    tbl[[i]] %>%
+      mutate(
+        sig = FDR < 0.05,
+        pval = scientific(pval),
+        FDR = scientific(FDR)
+      ) %>%
+      dplyr::select(Pathway, Direction, pval, FDR, sig, edgeSize) %>%
+      lbComplexDT(
+        cap = paste0("Table ", i, ": Genotype - ", name[[i]]),
+        rownames = TRUE
+      )
+  }, tbl = kg_gsea_dar, name = names(kg_gsea_dar))
+})
+```
+
+## Wikipathway {.tabset .tabset-pills}
 
 ```{r}
 set.seed(220615)
 wk_gsea_dar <- colnames(contrasts) %>%
   sapply(function(cont){
-      genes_passed <- masterGR[[cont]] %>%
-        as_tibble() %>%
-        pull(gene_id)
-      fgseaMultilevel(wkByID, ranks_d[[cont]][genes_passed], eps = 0) %>%
-        as_tibble() %>%
-        dplyr::rename(FDR = padj, Pathway = pathway) %>%
-        dplyr::arrange(pval) %>%
-        mutate(
-          edgeSize = vapply(leadingEdge, length, numeric(1)),
-          Direction = case_when(
-            sign(ES) == 1 ~ "Up",
-            sign(ES) == -1 ~ "Down",
-            sign(ES) == 0 ~ "None"
-          ),
-          rank = row_number(),
-          bonf.p.adj = p.adjust(pval, "bonferroni"),
-          sig = bonf.p.adj < 0.05
-        )
+    genes_passed <- masterGR[[cont]] %>%
+      as_tibble() %>%
+      pull(gene_id)
+    fgseaMultilevel(wkByID, ranks_d[[cont]][genes_passed], eps = 0) %>%
+      as_tibble() %>%
+      dplyr::rename(FDR = padj, Pathway = pathway) %>%
+      dplyr::arrange(pval) %>%
+      mutate(
+        edgeSize = vapply(leadingEdge, length, numeric(1)),
+        Direction = case_when(
+          sign(ES) == 1 ~ "Up",
+          sign(ES) == -1 ~ "Down",
+          sign(ES) == 0 ~ "None"
+        ),
+        rank = row_number(),
+        bonf.p.adj = p.adjust(pval, "bonferroni"),
+        sig = bonf.p.adj < 0.05
+      )
   }, simplify = FALSE)
-
-wk_gsea_eqtl$EOfADvsWT[[10]] %>%
-  mutate(fdr.sig = FDR < 0.05) %>%
-  dplyr::select(Pathway, pval, FDR, fdr.sig, bonf.p.adj, sig, everything()) %>%
-  print(n = sum(.$fdr.sig))
-wk_gsea_dar$EOfADvsWT %>%
-  mutate(fdr.sig = FDR < 0.05) %>%
-  dplyr::select(Pathway, pval, FDR, fdr.sig, bonf.p.adj, sig, everything()) %>%
-  print(n = sum(.$fdr.sig))
-
-wk_gsea_eqtl$MPSvsWT[[10]] %>%
-  mutate(fdr.sig = FDR < 0.05) %>%
-  dplyr::select(Pathway, pval, FDR, fdr.sig, bonf.p.adj, sig, everything()) %>%
-  print(n = sum(.$fdr.sig))
-wk_gsea_dar$MPSvsWT %>%
-  mutate(fdr.sig = FDR < 0.05) %>%
-  dplyr::select(Pathway, pval, FDR, fdr.sig, bonf.p.adj, sig, everything()) %>%
-  print(n = sum(.$fdr.sig))
 ```
 
-# Tmp
+### Before weighting
 
 ```{r}
-ttdiv <- map2(topTables, masterGR, function(tt, div){
-  left_join(tt, as_tibble(div))
+tagList({
+  lapply(seq_along(wk_gsea_eqtl),  function(i, tbl, name){
+    tbl[[i]][[10]] %>%
+      mutate(
+        sig = FDR < 0.05,
+        pval = scientific(pval),
+        FDR = scientific(FDR)
+      ) %>%
+      dplyr::select(Pathway, Direction, pval, FDR, sig, edgeSize) %>%
+      lbComplexDT(
+        cap = paste0("Table ", i, ": Genotype - ", name[[i]]),
+        rownames = TRUE
+      )
+  }, tbl = wk_gsea_eqtl, name = names(wk_gsea_eqtl))
 })
-lapply(seq_along(ttdiv), function(x){
-  mutate(ttdiv[[x]], contrast = names(ttdiv)[x]) %>%
-    dplyr::filter(!is.na(diversity))
-}) %>%
-  bind_rows() %>%
-  ggplot(aes(x = diversity, y = -log10(PValue))) +
-  geom_point() +
-  labs(x = "Diversity score", y = log10plab) +
-  facet_wrap(~contrast, ncol = 1)
+```
+
+### After weighting
+
+```{r}
+tagList({
+  lapply(seq_along(wk_gsea_dar),  function(i, tbl, name){
+    tbl[[i]] %>%
+      mutate(
+        sig = FDR < 0.05,
+        pval = scientific(pval),
+        FDR = scientific(FDR)
+      ) %>%
+      dplyr::select(Pathway, Direction, pval, FDR, sig, edgeSize) %>%
+      lbComplexDT(
+        cap = paste0("Table ", i, ": Genotype - ", name[[i]]),
+        rownames = TRUE
+      )
+  }, tbl = wk_gsea_dar, name = names(wk_gsea_dar))
+})
 ```
