--- a/R/_enrichment_pub.Rmd
+++ b/R/_enrichment_pub.Rmd
@@ -27,6 +27,193 @@ knitr::opts_chunk$set(
 knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file())
 ```
 
+# Figure 9 - Thresholding with ROAST and GSEA
+
+```{r}
+threshPlots_de <- lapply(threshOutcomes, function(x){
+  x %>%
+    pivot_longer(
+      cols = c(DE_count, DE_prop, notDE_count, notDE_prop),
+      names_to = c("sig", "type"),
+      names_sep = "_"
+    ) %>%
+    pivot_wider(
+      names_from = "type",
+      values_from = "value"
+    ) %>%
+    ggplot(aes(x = threshold, y = prop, group = sig, fill = sig)) +
+    geom_bar(position = "dodge", stat = "identity", width = 0.08) +
+    geom_text(
+      aes(x = threshold, y = prop, label = count),
+      size = 1.8,
+      nudge_y = 0.05,
+      nudge_x = c(-0.019, 0.019)
+    ) +
+    scale_x_continuous(breaks = thresholds) +
+    scale_y_continuous(breaks = c(0, 0.2, 0.4, 0.6, 0.8, 1)) +
+    scale_fill_manual(values = c("grey", "black"), labels = c("DE", "Not DE")) +
+    theme(plot.margin = margin(0, 5, 0, 0, unit = "cm")) +
+    coord_cartesian(clip = "off", xlim = c(0.1, 1)) +
+    labs(y = "\n\nProportion of\ngenes removed", x = "DAR threshold") +
+    theme(
+      legend.position = c(1.1, 0.5),
+      legend.title = element_blank(),
+      panel.grid.minor.x = element_blank(),
+      panel.grid.major.x = element_blank(),
+      panel.border = element_blank(),
+      axis.title.x = element_text(size = 10),
+      axis.title.y = element_text(size = 10),
+      axis.text.y = element_text(size = 7.5)
+    )
+})
+```
+
+```{r}
+point_size <- 3.2
+text_size <- 1.5
+```
+
+```{r}
+rankPlots_kg_fry <- sapply(colnames(contrasts), function(cont){
+  lapply(kg_fry_eqtl[[cont]], function(threshold){
+    threshold %>%
+      dplyr::filter(Pathway %in% kg_fry_eqtl_top[[cont]]) %>%
+      mutate(rel_rank = row_number())
+  }) %>%
+    bind_rows() %>%
+    mutate(
+      label = str_replace_all(Pathway, "_", " "),
+      label = str_to_sentence(label),
+      label = ifelse(
+        diversity_threshold == 1,
+        str_trunc(label, width = 32),
+        NA
+      )
+    ) %>%
+    ggplot(aes(
+      diversity_threshold,
+      rel_rank,
+      group = Pathway,
+      colour = Pathway,
+      fill = factor(ifelse(sig, Pathway, NA)),
+      text = sprintf(
+        paste0(
+          "Pathway: %s<br>",
+          "Rank: %i<br>",
+          "Relative rank: %i<br>",
+          "FDR (mixed): %e<br>",
+          "Number of genes: %i<br>",
+          "Direction: %s"
+        ),
+        Pathway, rank, rel_rank, FDR.Mixed, NGenes, Direction
+      )
+    )) +
+    geom_line() +
+    geom_point(shape = 21, size = point_size) +
+    geom_text(aes(label = rank), colour = "black", size = text_size) +
+    geom_text(aes(x = 1.01, label = label), size = 3.2, hjust = 0, nudge_x = 0.01, na.rm = TRUE) +
+    scale_y_reverse(breaks = seq(1, length(kg_fry_eqtl_top[[cont]]), 1)) +
+    scale_x_continuous(breaks = thresholds) +
+    scale_fill_manual(values = kg_cols, na.value="white") +
+    scale_colour_manual(values = kg_cols) +
+    labs(x = "Diversity score cut-off", y = "\n\n\nRelative rank (ROAST)") +
+    theme(plot.margin = margin(0, 5, 0, 0, unit = "cm")) +
+    coord_cartesian(clip = "off") +
+    theme(
+      legend.position = "none",
+      panel.grid.minor.y = element_blank(),
+      panel.grid.major.y = element_blank(),
+      panel.grid.minor.x = element_blank(),
+      panel.border = element_blank(),
+      axis.title.x = element_blank(),
+      axis.title.y = element_text(size = 10)
+    )
+}, simplify = FALSE)
+```
+
+```{gsea}
+rankPlots_kg_gsea <- sapply(colnames(contrasts), function(cont){
+  lapply(kg_gsea_eqtl[[cont]], function(threshold){
+    threshold %>%
+      dplyr::filter(Pathway %in% kg_gsea_eqtl_top[[cont]]) %>%
+      mutate(rel_rank = row_number())
+  }) %>%
+    bind_rows() %>%
+    mutate(
+      label = str_replace_all(Pathway, "_", " "),
+      label = str_to_sentence(label),
+      label = ifelse(
+        diversity_threshold == 1,
+        str_trunc(label, width = 32),
+        NA
+      )
+    ) %>%
+    ggplot(aes(
+      diversity_threshold,
+      rel_rank,
+      group = Pathway,
+      colour = Pathway,
+      fill = factor(ifelse(sig, Pathway, NA)),
+      text = sprintf(
+        paste0(
+          "Pathway: %s<br>",
+          "Rank: %i<br>",
+          "Relative rank: %i<br>",
+          "FDR: %e<br>",
+          "Leading edge size: %i<br>",
+          "Direction: %s"
+        ),
+        Pathway, rank, rel_rank, FDR, edgeSize, Direction
+      )
+    )) +
+    geom_line() +
+    geom_point(shape = 21, size = point_size) +
+    geom_text(aes(label = rank), colour = "black", size = text_size) +
+    geom_text(aes(x = 1.01, label = label), size = 3.2, hjust = 0, nudge_x = 0.01, na.rm = TRUE) +
+    scale_y_reverse(breaks = seq(1, length(kg_gsea_eqtl_top[[cont]]), 1)) +
+    scale_x_continuous(breaks = thresholds) +
+    scale_fill_manual(values = kg_cols, na.value="white") +
+    scale_colour_manual(values = kg_cols) +
+    labs(x = "Diversity score cut-off", y = "\n\n\nRelative rank (GSEA)") +
+    theme(plot.margin = margin(0, 5, 0, 0, unit = "cm")) +
+    coord_cartesian(clip = "off") +
+    theme(
+      legend.position = "none",
+      panel.grid.minor.y = element_blank(),
+      panel.grid.major.y = element_blank(),
+      panel.grid.minor.x = element_blank(),
+      panel.border = element_blank(),
+      axis.title.x = element_blank(),
+      axis.title.y = element_text(size = 10)
+    )
+}, simplify = FALSE)
+```
+
+```{r}
+ggarrange(
+  rankPlots_kg_fry$MPSvsWT,
+  ggplot(),
+  rankPlots_kg_gsea$MPSvsWT,
+  ggplot(),
+  threshPlots_de$MPSvsWT,
+  ncol = 1,
+  heights = c(4,0.2, 4, 0.2, 2),
+  labels = c("A", "", "B", "", "C")
+)
+```
+
+```{r}
+ggsave(
+  "~/phd/publications/fisher_pub/figures/figure_9.png",
+  device = "png",
+  width = 18,
+  height = 15,
+  units = "cm"
+)
+```
+
+# Supp figure 4 - Effect of weighting
+
 ```{r}
 map2(ranks_d, ranks_d_dar, function(before, after){
   before <- enframe(before, name = "gene_id", value = "before") %>%
