--- a/R/_enrichment_pub.Rmd
+++ b/R/_enrichment_pub.Rmd
@@ -27,7 +27,7 @@ knitr::opts_chunk$set(
 knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file())
 ```
 
-# Figure 9 - Thresholding with ROAST and GSEA
+# Figure 8 - Thresholding with ROAST and GSEA
 
 ```{r}
 threshPlots_de <- lapply(threshOutcomes, function(x){
@@ -204,10 +204,71 @@ ggarrange(
 
 ```{r}
 ggsave(
-  "~/phd/publications/fisher_pub/figures/figure_9.png",
+  "~/phd/publications/fisher_pub/figures/figure_8.png",
   device = "png",
   width = 18,
   height = 15,
+  units = "cm"
+)
+```
+
+# Figure 9 - p values when thresholding
+
+```{r}
+pPlots_kg_gsea <- sapply(colnames(contrasts), function(cont){
+  lapply(kg_gsea_eqtl[[cont]], function(threshold){
+    threshold %>%
+      dplyr::filter(Pathway %in% kg_gsea_eqtl_sig[[cont]]) %>%
+      mutate(rel_rank = row_number())
+  }) %>%
+    bind_rows() %>%
+    mutate(
+      title = str_replace_all(Pathway, "_", " "),
+      title = str_to_title(title),
+      title = ifelse(
+        title == "Citrate Cycle Tca Cycle",
+        "Citrate Cycle TCA Cycle",
+        title
+      )
+    ) %>%
+    ggplot(aes(
+      diversity_threshold,
+      -log10(pval),
+      group = Pathway,
+      colour = Pathway,
+      fill = factor(ifelse(sig, Pathway, NA))
+    )) +
+    geom_line() +
+    geom_point(shape = 21, size = 4) +
+    geom_text(aes(label = edgeSize), colour = "black", size = 2.1) +
+    scale_x_continuous(breaks = thresholds) +
+    scale_y_continuous(breaks = c(0, 2, 4, 6, 8, 10, 12)) +
+    scale_colour_manual(values = kg_cols) +
+    scale_fill_manual(values = kg_cols, na.value="white") +
+    labs(x = "DAR threshold", y = log10plab) +
+    facet_wrap(~title, ncol = 2) +
+    theme(
+      legend.position = "none",
+      panel.grid.minor.y = element_blank(),
+      panel.grid.minor.x = element_blank(),
+    )
+}, simplify = FALSE)
+```
+
+```{r results='hide'}
+lapply(seq_along(pPlots_kg_gsea), function(i, pPlot, sig){
+  if (length(sig[[i]])) {
+    pPlot[[i]]
+  }
+}, pPlot = pPlots_kg_gsea, sig = kg_gsea_eqtl_sig)
+```
+
+```{r}
+ggsave(
+  "~/phd/publications/fisher_pub/figures/figure_9.png",
+  device = "png",
+  width = 27,
+  height = 18,
   units = "cm"
 )
 ```
